# pubsub

./: .env.example  .gitignore  pyproject.toml  readme.md  run.sh  settings.py
public_api/: config.py  main.py
publisher/: publisher.py
subscriber/: subscriber.py
