[tool.poetry]
name = "publisher-subscriber architecture with redis"
version = "0.1.0"
description = "Exploring features of Redis as a database as well as message queue using FastAPI"
authors = ["Anu1996rag <anuragpatils1996@gmail.com>"]
readme = "README.md"
packages = [{include = "publisher_subscriber architecture with redis"}]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "2.0.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
